# oop_bases_challenges

./: pyproject.toml
helpers/: fake.py
level_1/: a_user_instance.py  b_student_full_name_method.py  c_product_class.py  d_bank_account_increase_balance.py  e_bank_account_decrease_balance.py
level_2/: a_user_from_functions_to_class.py  b_user_should_be_banned.py
level_3/: a_credit_bank_account.py  b_user_manage.py  c_text_processor.py  d_alcohol_product.py
level_4/: a_file_handler.py  b_food_product.py
level_5/: a_premium_food.py  b_change_admin_email.py  c_authorization_form_mixin.py  d_response_headers.py
level_6/: a_log_products.py  b_developer.py
level_7/: a_ebay_title.py  b_bank_account.py  c_photo_limit.py  d_google_logs.py  e_user_str_repr.py  f_students_group.py
