[tool.poetry]
name = "oop-bases-challenges"
version = "0.1.0"
description = ""
authors = ["Dmitriy <dimk00z@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^25.2.0"
loguru = "^0.7.2"

[tool.pyright]
venv = ".venv"
venvPath = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
